<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/header_1"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/list_paired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/new_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_paired">

        <TextView
            android:id="@+id/header_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/header_2"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/header_2" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_layout"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:text="@string/empty"
        android:layout_below="@id/list_discover"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:fontFamily="sans-serif"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_search_black_24dp"/>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>